--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-#background{
+/* #background{
     display: grid;
     grid-template-rows: 200px 200px;
     background-color: #9d81e6;
-}
+} */
 
 h1{
     color: #9d81e6;
@@ -19,12 +19,34 @@ p{
 button{
     background-color: #9d81e6;
     color: white;
+    border-radius: 30px;
+    width: 200px;
+    height: 30px;
 }
 
 a{
     color: #9d81e6;
 }
 
-form{
+.login{
     text-align: center;
+    background-color: white;
 }
+
+input[type=text] {
+    border: none;
+    border-bottom: 2px solid gray;
+  }
+
+  input[type=password] {
+    border: none;
+    border-bottom: 2px solid gray;
+  }
+
+  .forms {
+      background-color: #9d81e6;
+    display: grid;
+    grid-template-columns: 200px 500px;
+    grid-template-rows: 200px 100px 400px;
+    grid-gap: 20px;
+  }
