--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-/* #background{
+#background{
     display: grid;
     grid-template-rows: 200px 200px;
     background-color: #9d81e6;
-} */
+}
 
 h1{
     color: #9d81e6;
@@ -20,7 +20,7 @@ button{
     background-color: #9d81e6;
     color: white;
     border-radius: 30px;
-    width: 200px;
+    width: 100px;
     height: 30px;
 }
 
@@ -30,7 +30,6 @@ a{
 
 .login{
     text-align: center;
-    background-color: white;
 }
 
 input[type=text] {
@@ -43,8 +42,7 @@ input[type=text] {
     border-bottom: 2px solid gray;
   }
 
-  .forms {
-      background-color: #9d81e6;
+  .white-box {
     display: grid;
     grid-template-columns: 200px 500px;
     grid-template-rows: 200px 100px 400px;
